Fix srvb img and link

--- a/src/pages/showcase.mdx
+++ b/src/pages/showcase.mdx
@@ -15,7 +15,7 @@ import { Card, Cards } from 'nextra/components';
   <Card image title="Coincident Spectra" href="https://coincident-spectra.fission.app/" target="_blank">
     <>![Coincident Spectra Showcase Preview](/img/showcase/coincident_spectra.jpg)</>
   </Card>
-  <Card image title="SRVB" href="https://github.com/elemaudio/effects-plugin" target="_blank">
+  <Card image title="SRVB" href="https://github.com/elemaudio/srvb" target="_blank">
     <>![SRVB Showcase Preview](/img/showcase/srvb.jpg)</>
   </Card>
   <Card image title="ADSR" href="https://adsr.vercel.app/" target="_blank">
