Update showcase.mdx - added Chromatone

--- a/src/pages/showcase.mdx
+++ b/src/pages/showcase.mdx
@@ -21,6 +21,9 @@ import { Card, Cards } from 'nextra/components';
   <Card image title="ADSR" href="https://adsr.vercel.app/" target="_blank">
     <>![ADSR Showcase Preview](/img/showcase/adsr.jpg)</>
   </Card>
+  <Card image title="Chromatone" href="https://chromatone.center/" target="_blank">
+    <>![Chromatone Showcase Preview](/img/showcase/chromatone.jpg)</>
+  </Card>
 </Cards>
 
 {<p className="py-16 text-center text-md text-gray-500 dark:text-gray-400">Want to see your project listed here? Let me know on <a href="https://discord.gg/xSu9JjHwYc" target="_blank">Discord</a>.</p>}
