Fixed info callouts

--- a/src/pages/docs/guides/Virtual_File_System.mdx
+++ b/src/pages/docs/guides/Virtual_File_System.mdx
@@ -1,3 +1,5 @@
+import { Callout } from 'nextra/components'
+
 # Virtual File System (VFS)
 
 Elementary uses the notion of a virtual file system to coordinate audio processing nodes
@@ -6,13 +8,13 @@ node which manages playback of an audio sample, or `el.table` which performs an 
 read from a lookup table. Using the virtual file system enables internal shared memory optimizations
 and allows the audio processing nodes to remain lightweight.
 
-:::info
-While we refer to this feature as a virtual "file system," it's really just a flat storage object
-which maps from an arbitrary string name (key) to a single-channel buffer of audio data (value).
+<Callout type="info">
+  While we refer to this feature as a virtual "file system," it's really just a flat storage object
+  which maps from an arbitrary string name (key) to a single-channel buffer of audio data (value).
 
-In future versions, the API naming may be updated to reflect this. The native C++ interface already
-referes to the same feature as a "shared resource map."
-:::
+  In future versions, the API naming may be updated to reflect this. The native C++ interface already
+  referes to the same feature as a "shared resource map."
+</Callout>
 
 ## Loading data into the VFS
 
