--- a/src/pages/docs/reference/fft.mdx
+++ b/src/pages/docs/reference/fft.mdx
@@ -1,13 +1,14 @@
 ---
 sidebar_label: el.fft
 ---
+import { Callout } from 'nextra/components'
 
 # el.fft([props], x)
 
-:::info
-Only available in the WASM-based renderers (web-renderer, offline-renderer). You may extend the runtime
-in your own integration with the same FFT processors if you like, but it is not provided by default.
-:::
+<Callout type="info">
+  Only available in the WASM-based renderers (web-renderer, offline-renderer). You may extend the runtime
+  in your own integration with the same FFT processors if you like, but it is not provided by default.
+</Callout>
 
 Analyzes its input signal `x` with a real value to complex value Fast Fourier Transform, emitting the
 results of each analysis block as a JavaScript event through the core event emitter. The input
