--- a/src/pages/docs/reference/metro.mdx
+++ b/src/pages/docs/reference/metro.mdx
@@ -1,13 +1,15 @@
 ---
 sidebar_label: el.metro
 ---
+import { Callout } from 'nextra/components'
 
 # el.metro([props])
 
-:::info
-Only available in the WASM-based renderers (web-renderer, offline-renderer). You may extend the runtime
-in your own integration with a similar processor if you like, but it is not provided by default.
-:::
+<Callout type="info">
+  Only available in the WASM-based renderers (web-renderer, offline-renderer). You may extend the runtime
+  in your own integration with a similar processor if you like, but it is not provided by default.
+</Callout>
+
 
 Emits a pulse train signal much like `el.train`, alternating from 0 to 1 at a
 given rate. Importantly, the `el.metro` ("Metronome") node is used for synchronized
