--- a/src/pages/docs/guides/Virtual_File_System.mdx
+++ b/src/pages/docs/guides/Virtual_File_System.mdx
@@ -13,7 +13,7 @@ and allows the audio processing nodes to remain lightweight.
   which maps from an arbitrary string name (key) to a single-channel buffer of audio data (value).
 
   In future versions, the API naming may be updated to reflect this. The native C++ interface already
-  referes to the same feature as a "shared resource map."
+  refers to the same feature as a "shared resource map."
 </Callout>
 
 ## Loading data into the VFS
