--- a/src/pages/docs/tutorials/distortion-saturation-wave-shaping.mdx
+++ b/src/pages/docs/tutorials/distortion-saturation-wave-shaping.mdx
@@ -74,7 +74,7 @@ export function playEx02(sliderValue) {
 
   core.render(
     el.scope(el.select(vs, wl, dl)),
-    el.select(vs, wl, dl),
+    el.select(vs, wr, dr),
   );
 }
 ```
