--- a/src/pages/showcase.mdx
+++ b/src/pages/showcase.mdx
@@ -6,6 +6,9 @@ import { Card, Cards } from 'nextra/components';
 
 
 <Cards>
+  <Card image title="Lunacy Audio Beam" href="https://lunacy.audio/products/beam/" target="_blank">
+    <>![Beam Showcase Preview](/img/showcase/beam.jpg)</>
+  </Card>
   <Card image title="Arpeggi Studio" href="https://arpeggi.io/studio-landing" target="_blank">
     <>![Arpeggi Showcase Preview](/img/showcase/arpeggi_studio.jpg)</>
   </Card>
