--- a/src/pages/showcase.mdx
+++ b/src/pages/showcase.mdx
@@ -6,6 +6,9 @@ import { Card, Cards } from 'nextra/components';
 
 
 <Cards>
+ <Card image title="NEL Shifter Mesh" href="https://nel-shifter-mesh.vercel.app/" target="_blank">
+    <>![Beam Showcase Preview](/img/showcase/shiftermesh.webp)</>
+  </Card>
   <Card image title="Lunacy Audio Beam" href="https://lunacy.audio/products/beam/" target="_blank">
     <>![Beam Showcase Preview](/img/showcase/beam.jpg)</>
   </Card>
