Update reference pages to reflect explicit props args

--- a/src/pages/docs/reference/convolve.mdx
+++ b/src/pages/docs/reference/convolve.mdx
@@ -3,13 +3,12 @@ sidebar_label: el.convolve
 ---
 import { Callout } from 'nextra/components'
 
-# el.convolve([props], x)
+# el.convolve(props, x)
 
 <Callout type="info">
   Only available in the WASM-based renderers (web-renderer, offline-renderer). You may extend the runtime
 in your own integration with a similar processor if you like, but it is not provided by default.
 </Callout>
-
 
 
 A convolution node which reads an impulse response from the [virtual file system](../guides/Virtual_File_System.md) and convolves it with
