--- a/src/pages/docs/reference/fft.mdx
+++ b/src/pages/docs/reference/fft.mdx
@@ -3,7 +3,7 @@ sidebar_label: el.fft
 ---
 import { Callout } from 'nextra/components'
 
-# el.fft([props], x)
+# el.fft(props, x)
 
 <Callout type="info">
   Only available in the WASM-based renderers (web-renderer, offline-renderer). You may extend the runtime
