--- a/src/pages/docs/reference/time.mdx
+++ b/src/pages/docs/reference/time.mdx
@@ -3,8 +3,8 @@ sidebar_label: el.time
 ---
 import { Callout } from 'nextra/components'
 
-# el.time([props])
- 
+# el.time()
+
 <Callout type="info">
   Only available in the WASM-based renderers (web-renderer, offline-renderer). You may extend the runtime
   in your own integration with a similar processor if you like, but it is not provided by default.
@@ -12,7 +12,3 @@ import { Callout } from 'nextra/components'
 
 Returns a continuous, monotonically increasing signal counting the number of elapsed
 audio samples in the underlying audio engine.
-
-#### Props
-
-None
