Update Coincident Spectra showcase link

--- a/src/pages/showcase.mdx
+++ b/src/pages/showcase.mdx
@@ -15,7 +15,7 @@ import { Card, Cards } from 'nextra/components';
   <Card image title="Elementary Grid" href="https://teetow.com/elementary_grid/" target="_blank">
     <>![Elementary Grid Showcase Preview](/img/showcase/elementary_grid.jpg)</>
   </Card>
-  <Card image title="Coincident Spectra" href="https://coincident-spectra.fission.app/" target="_blank">
+  <Card image title="Coincident Spectra" href="https://coincident-spectra.brianginsburg.com/" target="_blank">
     <>![Coincident Spectra Showcase Preview](/img/showcase/coincident_spectra.jpg)</>
   </Card>
   <Card image title="SRVB" href="https://github.com/elemaudio/srvb" target="_blank">
