--- a/src/pages/showcase.mdx
+++ b/src/pages/showcase.mdx
@@ -6,14 +6,14 @@ import { Card, Cards } from 'nextra/components';
 
 
 <Cards>
- <Card image title="NEL Shifter Mesh" href="https://nel-shifter-mesh.vercel.app/" target="_blank">
-    <>![Beam Showcase Preview](/img/showcase/shiftermesh.webp)</>
-  </Card>
   <Card image title="Lunacy Audio Beam" href="https://lunacy.audio/products/beam/" target="_blank">
     <>![Beam Showcase Preview](/img/showcase/beam.jpg)</>
   </Card>
   <Card image title="Arpeggi Studio" href="https://arpeggi.io/studio-landing" target="_blank">
     <>![Arpeggi Showcase Preview](/img/showcase/arpeggi_studio.jpg)</>
+  </Card>
+ <Card image title="NEL Shifter Mesh" href="https://nel-shifter-mesh.vercel.app/" target="_blank">
+    <>![NEL Shifter Mesh Preview](/img/showcase/ShifterMesh.jpg)</>
   </Card>
   <Card image title="Elementary Grid" href="https://teetow.com/elementary_grid/" target="_blank">
     <>![Elementary Grid Showcase Preview](/img/showcase/elementary_grid.jpg)</>
@@ -21,14 +21,14 @@ import { Card, Cards } from 'nextra/components';
   <Card image title="Coincident Spectra" href="https://coincident-spectra.brianginsburg.com/" target="_blank">
     <>![Coincident Spectra Showcase Preview](/img/showcase/coincident_spectra.jpg)</>
   </Card>
+  <Card image title="Chromatone" href="https://chromatone.center/" target="_blank">
+    <>![Chromatone Showcase Preview](/img/showcase/chromatone.jpg)</>
+  </Card>
   <Card image title="SRVB" href="https://github.com/elemaudio/srvb" target="_blank">
     <>![SRVB Showcase Preview](/img/showcase/srvb.jpg)</>
   </Card>
   <Card image title="ADSR" href="https://adsr.vercel.app/" target="_blank">
     <>![ADSR Showcase Preview](/img/showcase/adsr.jpg)</>
-  </Card>
-  <Card image title="Chromatone" href="https://chromatone.center/" target="_blank">
-    <>![Chromatone Showcase Preview](/img/showcase/chromatone.jpg)</>
   </Card>
 </Cards>
 
